--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -593,26 +593,81 @@ function fill(rows){
     tr.children[1].textContent = refRaw ? refRaw : "—";
     tr.dataset.refEmail = refEmail || "";
 
-    // AGENT
-    const btnA = tr.querySelector(".agentBtn");
-    if(btnA){
-      btnA.classList.remove("locked","mine","loading");
+    // AGENT button
+const btnA = tr.querySelector(".agentBtn");
+if (btnA) {
+
+  btnA.classList.remove("locked", "mine", "loading");
+  btnA.disabled = false;
+
+  const month = tr.dataset.month;
+  const meEmail = (me || "").toLowerCase();
+
+  // agRaw doit être idéalement "Prenom|email" (ex: "Pierre|pierre@gmail.com")
+  const agObj = parseSigned(agRaw);
+  const label = (agObj.name || agRaw || "").trim();
+  const agentEmail = (agObj.email || "").toLowerCase();
+
+  // 1) personne inscrit -> bouton S'inscrire
+  if (!agRaw) {
+    btnA.textContent = "S’inscrire";
+
+    btnA.onclick = async () => {
+      if (!meEmail) { alert("Email non détecté (connexion)."); return; }
+
+      const ok = await askConfirm(`S’inscrire sur ${month} ?`);
+      if(!ok) return;
+
+      btnA.classList.add("loading");
+      btnA.disabled = true;
+
+      const r = await apiCall("vsav_set_agent", {
+        month,
+        email: meEmail,
+        name: (myName() || "").trim()
+      });
+
+      btnA.classList.remove("loading");
       btnA.disabled = false;
 
-      if(!agRaw){
-        btnA.textContent = "S’inscrire";
-      }else{
-        const isMine = (agEmail && me && agEmail === me);
-        if(isMine){
-          btnA.textContent = agRaw + " (Annuler)";
-          btnA.classList.add("mine");
-        }else{
-          btnA.textContent = agRaw;
-          btnA.classList.add("locked");
-          btnA.disabled = true;
-        }
-      }
+      if(!r?.ok){ alert(r?.error || "Erreur"); return; }
+      await refresh();
+    };
+
+  } else {
+
+    // 2) quelqu'un est inscrit
+    if (agentEmail && meEmail && agentEmail === meEmail) {
+      // c'est moi -> je peux annuler
+      btnA.textContent = label + " (Annuler)";
+      btnA.classList.add("mine");
+
+      btnA.onclick = async () => {
+        const ok = await askConfirm(`Annuler ton inscription (${month}) ?`);
+        if(!ok) return;
+
+        btnA.classList.add("loading");
+        btnA.disabled = true;
+
+        const r = await apiCall("vsav_unset_agent", { month, email: meEmail });
+
+        btnA.classList.remove("loading");
+        btnA.disabled = false;
+
+        if(!r?.ok){ alert(r?.error || "Erreur"); return; }
+        await refresh();
+      };
+
+    } else {
+      // c'est un autre -> bloqué
+      btnA.textContent = label;
+      btnA.classList.add("locked");
+      btnA.disabled = true;
+      btnA.onclick = null;
     }
+  }
+}
+
 
     // FAIT
     const btnF = tr.querySelector(".faitBtn");
@@ -673,8 +728,12 @@ async function onAgentClick(tr){
   btnA.disabled = true;
 
   const nm = myName(); // optionnel
-  const r = await apiCall(action, isMine ? { month, email: me } : { month, email: me, name: nm });
-
+  const r = await apiCall(
+  action,
+  isMine
+    ? { month, email: me }
+    : { month, email: me, name: (myName() || "").trim() } // envoie le prénom
+);
   btnA.classList.remove("loading");
   btnA.disabled = false;
 
