--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -584,7 +584,8 @@ function fmtFR(iso){
    ======================= */
 function fill(rows){
   const tbody = document.getElementById("tbody");
-  const me = myEmail();
+  const meEmail = (myEmail() || "").trim().toLowerCase();
+  const meName = (myName() || "").trim();
 
   for(let i=0;i<12;i++){
     const tr = tbody.children[i];
@@ -594,103 +595,58 @@ function fill(rows){
     const mois = (row.mois || tr.dataset.month || "").toString().trim().toUpperCase();
     tr.dataset.month = mois;
 
-    const refRaw = (row.referent ?? "").toString().trim();
-    const refEmail = (row.referent_email ?? "").toString().trim().toLowerCase();
+    // ✅ référent : prénom + email (droits)
+    const refName = (row.referent || "").toString().trim();
+    const refEmail = (row.referent_email || "").toString().trim().toLowerCase();
 
-    const agRaw = (row.agent ?? "").toString().trim();
-    const agEmail = (row.agent_email ?? "").toString().trim().toLowerCase();
+    // ✅ agent : prénom + email (annulation)
+    const agName = (row.agent || "").toString().trim();
+    const agEmail = (row.agent_email || "").toString().trim().toLowerCase();
 
-    const status = (row.status ?? "").toString().trim();
-    const dateISO = (row.date ?? "").toString().trim();
-    const justif = (row.justificatif ?? "").toString().trim();
+    const status = (row.status || "").toString().trim();
+    const dateISO= (row.date || "").toString().trim();
+    const justif = (row.justificatif || "").toString().trim();
 
-    // REF
-    tr.children[1].textContent = refRaw ? refRaw : "—";
+    // REF (affichage) + droits
+    tr.children[1].textContent = refName ? refName : "—";
     tr.dataset.refEmail = refEmail || "";
 
-    // AGENT button
-const btnA = tr.querySelector(".agentBtn");
-if (btnA) {
-
-  btnA.classList.remove("locked", "mine", "loading");
-  btnA.disabled = false;
-
-  const month = tr.dataset.month;
-  const meEmail = (me || "").toLowerCase();
-
-  // agRaw doit être idéalement "Prenom|email" (ex: "Pierre|pierre@gmail.com")
-  const agObj = parseSigned(agRaw);
-  const label = (agObj.name || agRaw || "").trim();
-  const agentEmail = (agObj.email || "").toLowerCase();
-
-  // 1) personne inscrit -> bouton S'inscrire
-  if (!agRaw) {
-    btnA.textContent = "S’inscrire";
-
-    btnA.onclick = async () => {
-      if (!meEmail) { alert("Email non détecté (connexion)."); return; }
-
-      const ok = await askConfirm(`S’inscrire sur ${month} ?`);
-      if(!ok) return;
-
-      btnA.classList.add("loading");
-      btnA.disabled = true;
-
-      const r = await apiCall("vsav_set_agent", {
-        month,
-        email: meEmail,
-        name: (myName() || "").trim()
-      });
-
-      btnA.classList.remove("loading");
+    // ======================
+    // AGENT button (affichage + état)
+    // ======================
+    const btnA = tr.querySelector(".agentBtn");
+    if(btnA){
+      btnA.classList.remove("locked","mine","loading");
       btnA.disabled = false;
 
-      if(!r?.ok){ alert(r?.error || "Erreur"); return; }
-      await refresh();
-    };
+      // 1) Personne inscrit
+      if(!agName && !agEmail){
+        btnA.textContent = "S’inscrire";
+        // ⚠️ le clic est géré par bind() -> onAgentClick(tr)
+      }else{
+        // 2) Quelqu’un est inscrit
+        btnA.textContent = agName || "—";
 
-  } else {
-
-    // 2) quelqu'un est inscrit
-    if (agentEmail && meEmail && agentEmail === meEmail) {
-      // c'est moi -> je peux annuler
-      btnA.textContent = label + " (Annuler)";
-      btnA.classList.add("mine");
-
-      btnA.onclick = async () => {
-        const ok = await askConfirm(`Annuler ton inscription (${month}) ?`);
-        if(!ok) return;
-
-        btnA.classList.add("loading");
-        btnA.disabled = true;
-
-        const r = await apiCall("vsav_unset_agent", { month, email: meEmail });
-
-        btnA.classList.remove("loading");
-        btnA.disabled = false;
-
-        if(!r?.ok){ alert(r?.error || "Erreur"); return; }
-        await refresh();
-      };
-
-    } else {
-      // c'est un autre -> bloqué
-      btnA.textContent = label;
-      btnA.classList.add("locked");
-      btnA.disabled = true;
-      btnA.onclick = null;
+        // ✅ c’est moi : on compare sur agent_email (PAS parseSigned)
+        if(agEmail && meEmail && agEmail === meEmail){
+          btnA.classList.add("mine");
+          // pas de "(Annuler)" comme tu veux
+        }else{
+          btnA.classList.add("locked");
+          btnA.disabled = true;
+        }
+      }
     }
-  }
-}
 
-
-    // FAIT
+    // ======================
+    // FAIT (lecture seule ici, comme chez toi)
+    // ======================
     const btnF = tr.querySelector(".faitBtn");
     if(btnF){
       btnF.classList.remove("ok","bad","disabled","loading");
       btnF.disabled = false;
 
-      const isRef = (refEmail && me && refEmail === me);
+      const isRef = (refEmail && meEmail && refEmail === meEmail);
 
       if(!isRef){
         btnF.classList.add("disabled");
@@ -716,6 +672,7 @@ if (btnA) {
   }
 }
 
+
 /* =======================
    ACTIONS
    ======================= */
@@ -726,8 +683,10 @@ async function refresh(){
 
 async function onAgentClick(tr){
   const month = tr.dataset.month;
-  const me = myEmail();
-  if(!me){ alert("Email non détecté (connexion)."); return; }
+  const meEmail = (myEmail() || "").trim().toLowerCase();
+  const meName = (myName() || "").trim();
+
+  if(!meEmail){ alert("Email non détecté (connexion)."); return; }
 
   const btnA = tr.querySelector(".agentBtn");
   if(!btnA) return;
@@ -738,23 +697,49 @@ async function onAgentClick(tr){
   const ok = await askConfirm(isMine ? `Annuler ton inscription (${month}) ?` : `S’inscrire sur ${month} ?`);
   if(!ok) return;
 
-  // ✅ loading vert pendant le chargement
+  // ✅ Optimiste : on affiche tout de suite, sans attendre Sheets
+  if(!isMine){
+    btnA.textContent = meName || "Moi";
+    btnA.classList.add("mine");
+    btnA.classList.remove("locked");
+  }else{
+    btnA.textContent = "S’inscrire";
+    btnA.classList.remove("mine");
+  }
+
+  // ✅ loading vert pendant l’appel (même pour annuler)
   btnA.classList.add("loading");
   btnA.disabled = true;
 
-  const nm = myName(); // optionnel
-  const r = await apiCall(
-  action,
-  isMine
-    ? { month, email: me }
-    : { month, email: me, name: (myName() || "").trim() } // envoie le prénom
-);
-  btnA.classList.remove("loading");
-  btnA.disabled = false;
+  try{
+    const r = await apiCall(
+      action,
+      isMine
+        ? { month, email: meEmail }
+        : { month, email: meEmail, name: meName }
+    );
 
-  if(!r?.ok){ alert(r?.error || "Erreur"); return; }
-  await refresh();
+    if(!r?.ok){
+      // rollback si erreur
+      alert(r?.error || "Erreur");
+      await refresh();
+      return;
+    }
+
+    // on réactive vite (pas besoin d'attendre refresh)
+    btnA.classList.remove("loading");
+    btnA.disabled = false;
+
+    // refresh “en arrière-plan” pour récupérer l’état exact (referents, etc.)
+    setTimeout(()=>{ refresh(); }, 400);
+
+  }catch(err){
+    btnA.classList.remove("loading");
+    btnA.disabled = false;
+    await refresh();
+  }
 }
+
 
 async function onFaitClick(tr){
   const month = tr.dataset.month;
