--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -357,6 +357,14 @@ body{
   border-color: #1e7a3a !important;
   color:#fff;
 }
+  .agentBtn{
+  min-width: 120px; /* largeur minimum suffisante */
+  padding: 8px 14px;
+  white-space: nowrap; /* empêche le retour à la ligne */
+  overflow: visible; /* empêche les "..." */
+  text-overflow: unset; /* supprime l'ellipsis */
+}
+
   /* Mobile: évite que les dernières lignes soient masquées */
 body { padding-bottom: 90px; }
 </style>
