--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -358,11 +358,9 @@ body{
   color:#fff;
 }
   .agentBtn{
-  min-width: 120px; /* largeur minimum suffisante */
-  padding: 8px 14px;
-  white-space: nowrap; /* empêche le retour à la ligne */
-  overflow: visible; /* empêche les "..." */
-  text-overflow: unset; /* supprime l'ellipsis */
+  padding: 7px 8px;
+  width: 100%;
+  white-space: nowrap;
 }
 
   /* Mobile: évite que les dernières lignes soient masquées */
