--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -690,18 +690,19 @@ async function refresh(){
 async function onAgentClick(tr){
 
   const month = tr.dataset.month;
-  const meEmail = (myEmail() || "").trim().toLowerCase();
+  const meEmail = (myEmail() || "").toLowerCase();
   const meName = (myName() || "").trim();
 
-  if(!meEmail || !meName){
-    alert("Identité non détectée. Reconnexion nécessaire.");
+  if(!meEmail){
+    alert("Email non détecté.");
     return;
   }
 
   const btnA = tr.querySelector(".agentBtn");
   if(!btnA) return;
 
-  const isMine = btnA.classList.contains("mine");
+  const currentEmail = (tr.dataset.agentEmail || "").toLowerCase();
+  const isMine = currentEmail && currentEmail === meEmail;
 
   const ok = await askConfirm(
     isMine
@@ -711,55 +712,27 @@ async function onAgentClick(tr){
 
   if(!ok) return;
 
-  // =========================
-  // 🔥 AFFICHAGE IMMÉDIAT
-  // =========================
-
-  if(!isMine){
-    // inscription
-    btnA.textContent = meName;
-    btnA.classList.add("mine");
-  }else{
-    // annulation
-    btnA.textContent = "S’inscrire";
-    btnA.classList.remove("mine");
-  }
-
   btnA.classList.add("loading");
   btnA.disabled = true;
 
-  // =========================
-  // 📡 Appel Sheets en arrière-plan
-  // =========================
+  const action = isMine ? "vsav_unset_agent" : "vsav_set_agent";
 
-  try{
-    const action = isMine ? "vsav_unset_agent" : "vsav_set_agent";
+  const r = await apiCall(
+    action,
+    isMine
+      ? { month, email: meEmail }
+      : { month, email: meEmail, name: meName }
+  );
 
-    const r = await apiCall(
-      action,
-      isMine
-        ? { month, email: meEmail }
-        : { month, email: meEmail, name: meName }
-    );
+  btnA.classList.remove("loading");
+  btnA.disabled = false;
 
-    btnA.classList.remove("loading");
-    btnA.disabled = false;
-
-    if(!r?.ok){
-      // rollback si erreur
-      await refresh();
-      alert(r?.error || "Erreur");
-      return;
-    }
-
-    // refresh discret après 400ms
-    setTimeout(()=> refresh(), 400);
-
-  }catch(err){
-    btnA.classList.remove("loading");
-    btnA.disabled = false;
-    await refresh();
+  if(!r?.ok){
+    alert(r?.error || "Erreur");
+    return;
   }
+
+  await refresh();
 }
 
 
